Added reading csv files, and loading terrain.csv

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 **/*.png
 project_full_report.md
 datafiles/data/.~lock.UnitTypes.csv\#
+/grafiki_future
+pomysły
+pomysły.md
+datafiles/data/.~lock.UnitTypes2.csv\#
+datafiles/data/.~lock.UnitTypes2.csv\#
