Added basic editor view with camera controlls

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ pomysły
 pomysły.md
 datafiles/data/.~lock.UnitTypes2.csv\#
 datafiles/data/.~lock.UnitTypes2.csv\#
+planet-editor-design-doc (1).md
+planet-editor-design-doc.md
